@@ -1,2 +1,2 @@
-SUBDIRS = doc scripts libglimmer libglimmer-solve libglide libglint tests example-drivers
-EXTRA_DIST = make.rules
+SUBDIRS = m4macros doc scripts libglimmer libglimmer-solve libglide libglint tests example-drivers
+EXTRA_DIST = make.rules glimmer-cism-config.in
