@@ -1,4 +1,4 @@
 graphics = class_diagram.eps class_diagram_glint.eps glide_mod_depend.eps glimmer_structure.eps
-EXTRA_DIST = class_diagram.dia class_diagram_glint.dia glimmer_structure.dia glide_mod_depend.dia $(graphics)
+EXTRA_DIST = class_diagram.dia class_diagram_glint.dia glimmer_structure.dia glide_mod_depend.dia 
 BUILT_SOURCES = $(graphics)
 include $(top_srcdir)/doc/make_doc.rules
