@@ -1,7 +1,7 @@
 bin_PROGRAMS  =  glint_example glex_ebm
 
 nodist_include_HEADERS := $(wildcard *.mod)
-EXTRA_DIST = f90_dep.mak eismint3_vars.def
+EXTRA_DIST = f90_dep.mak
 BUILT_SOURCES = 
 CLEANFILES = $(BUILT_SOURCES) f90_dep.mak
 
